--- a/1-fundamentos/3-introducao-a-html-e-css/dia-4-html-e-css-html-semantico/exercicio-2/index.html
+++ b/1-fundamentos/3-introducao-a-html-e-css/dia-4-html-e-css-html-semantico/exercicio-2/index.html
@@ -21,8 +21,8 @@
         <h2>Fatos sobre o Stomatopoda</h2>
       </div>
     </header>
-    <!-- ARTICLE -->
-    <article>
+    <!-- MAIN -->
+    <main>
       <section class="info">
         <img
           src="MantisShrimp.jpg"
@@ -78,7 +78,7 @@
       <h3>Recurso adicional</h3>
       <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE&ab_channel=NatGeoWILD">Documentário sobre o soco da Lagosta Boxeadora</a>
 
-    </article>
+    </main>
     <!-- Rodapé -->
 <footer>Conteúdo compilado por Reinaldo Coelho de Souza, 2022.</footer>
   </body>
