mais acessível 2, com correções

--- a/1-fundamentos/3-introducao-a-html-e-css/dia-4-html-e-css-html-semantico/exercicio-2/index.html
+++ b/1-fundamentos/3-introducao-a-html-e-css/dia-4-html-e-css-html-semantico/exercicio-2/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Stomatopoda</title>
     <meta name="viewport" content="width=device-width" />
+    <meta name=”description” content="Algumas curiosidades sobre o Stomatopoda, o animal marinho capaz de dar um soco com velocidade de até 80 km/h.">
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Alexandria:wght@200;400&family=Roboto+Condensed&display=swap" rel="stylesheet">
   </head>
