exercicio 4.2 change main content color

--- a/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/exercicio-4-funcoes-e-manipulacao-do-dom/index.html
+++ b/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/exercicio-4-funcoes-e-manipulacao-do-dom/index.html
@@ -49,7 +49,11 @@
       }
       centerContentParagraph();
      //exercise 2
-
+     const changeMainContentColor = () => {
+        const colorGreen = document.getElementsByClassName('main-content')[0];
+        colorGreen.style.backgroundColor = 'rgb(76,164,109)';
+    } 
+    changeMainContentColor();
     </script>
   </body>
 </html>
