exercicio 4.3 change center background color

--- a/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/exercicio-4-funcoes-e-manipulacao-do-dom/index.html
+++ b/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/exercicio-4-funcoes-e-manipulacao-do-dom/index.html
@@ -54,6 +54,12 @@
         colorGreen.style.backgroundColor = 'rgb(76,164,109)';
     } 
     changeMainContentColor();
+    //exercise 3
+    const changeMainContentCenterColor = () => {
+        const colorWhite = document.getElementsByClassName('center-content')[0];
+        colorWhite.style.backgroundColor = 'white';
+    }
+    changeMainContentCenterColor();
     </script>
   </body>
 </html>
