exercise 5 toUpperCase paragraph

--- a/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/exercicio-4-funcoes-e-manipulacao-do-dom/index.html
+++ b/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/exercicio-4-funcoes-e-manipulacao-do-dom/index.html
@@ -60,6 +60,18 @@
         colorWhite.style.backgroundColor = 'white';
     }
     changeMainContentCenterColor();
+    //exercise 4
+    const changeH1Text = () => {
+        const changeH1Text = document.getElementsByTagName('h1')[0];
+        changeH1Text.innerText = 'Desafio - JavaScript';
+    }
+    changeH1Text();
+    // exercise 5
+    const changeP0 = () => {
+        const p0TextUppercase = document.getElementsByTagName('p')[0];
+        p0TextUppercase.innerText = p0TextUppercase.innerText.toUpperCase();
+    }
+    changeP0()
     </script>
   </body>
 </html>
