arquivos externos css e js

--- a/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/exercicio-4-funcoes-e-manipulacao-do-dom/index.html
+++ b/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/exercicio-4-funcoes-e-manipulacao-do-dom/index.html
@@ -4,31 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Exercício</title>
-    
-    <style>
-      main, section {
-        border-color: black;
-        border-style: solid;
-      }
-
-      .title {
-        text-align: center;
-      }
-
-      .main-content {
-        background-color: yellow;
-      }
-
-      .main-content .center-content {
-        background-color: red;
-        width: 50%;
-        margin: 0 auto;
-      }
-
-      .main-content .center-content p {
-        font-style: italic;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header> 
@@ -41,45 +17,6 @@
         <p>Trybe</p> 
       </section>
     </main>
-    <script>
-    //exercise 1
-    const centerContentParagraph = () => {
-        const future = document.getElementsByTagName('p')[1];
-        future.innerText = 'Lorem ipsum dolor sit amet consectetur adipisicing elit.';
-      }
-      centerContentParagraph();
-     //exercise 2
-     const changeMainContentColor = () => {
-        const colorGreen = document.getElementsByClassName('main-content')[0];
-        colorGreen.style.backgroundColor = 'rgb(76,164,109)';
-    } 
-    changeMainContentColor();
-    //exercise 3
-    const changeMainContentCenterColor = () => {
-        const colorWhite = document.getElementsByClassName('center-content')[0];
-        colorWhite.style.backgroundColor = 'white';
-    }
-    changeMainContentCenterColor();
-    //exercise 4
-    const changeH1Text = () => {
-        const changeH1Text = document.getElementsByTagName('h1')[0];
-        changeH1Text.innerText = 'Desafio - JavaScript';
-    }
-    changeH1Text();
-    // exercise 5
-    const changeP0 = () => {
-        const p0TextUppercase = document.getElementsByTagName('p')[0];
-        p0TextUppercase.innerText = p0TextUppercase.innerText.toUpperCase();
-    }
-    changeP0()
-    // exercise 6
-    const printTagP = () => {
-        let log = document.getElementsByTagName('p');
-        for (let i = 0; i < log.length; i += 1) {
-            console.log(log[i].innerHTML);
-        }
-    }
-    printTagP();
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
