exercise 5 part 1 set background color

--- a/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/index.html
+++ b/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/index.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exercício - Aplicando o DOM</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header class="buttons">buttons</header>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <section class="preferences">
+      <section class="background-color-buttons">
+        <h5>Cor de Fundo</h5>
+        <button id="white-button">white</button>
+        <button id="black-button">black</button>
+        <button id="green-button">green</button>
+        <button id="blue-button">blue</button>
+        <button id="yellow-button">yellow</button>
+      </section>
+    </section>
     <section class="section-content">
-    <h1>Lorem Ipsum</h1>
-    <h2>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis ac orci vel bibendum. Aenean at mauris tellus. Ut faucibus sapien et tempor aliquet. Sed orci mi, dictum quis magna maximus, sollicitudin bibendum eros. Phasellus leo ligula, pretium in mi at, laoreet aliquam risus. Quisque tristique hendrerit enim, vel iaculis dolor volutpat non. Fusce eu egestas turpis. Duis nibh ipsum, luctus eu velit in, porta facilisis urna. Duis faucibus elit at vehicula placerat. Donec eget sollicitudin sem. Integer a purus ac felis semper interdum nec auctor elit. Aenean eu ante vel massa vestibulum fermentum id at eros. Pellentesque malesuada porta purus sit amet convallis.</p>
-</section>
-<script src="script.js"></script>
-</body>
+      <h1>Lorem Ipsum</h1>
+      <h2>
+        "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
+        consectetur, adipisci velit..."
+      </h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis
+        ac orci vel bibendum. Aenean at mauris tellus. Ut faucibus sapien et
+        tempor aliquet. Sed orci mi, dictum quis magna maximus, sollicitudin
+        bibendum eros. Phasellus leo ligula, pretium in mi at, laoreet aliquam
+        risus. Quisque tristique hendrerit enim, vel iaculis dolor volutpat non.
+        Fusce eu egestas turpis. Duis nibh ipsum, luctus eu velit in, porta
+        facilisis urna. Duis faucibus elit at vehicula placerat. Donec eget
+        sollicitudin sem. Integer a purus ac felis semper interdum nec auctor
+        elit. Aenean eu ante vel massa vestibulum fermentum id at eros.
+        Pellentesque malesuada porta purus sit amet convallis.
+      </p>
+    </section>
+    <script src="script.js"></script>
+  </body>
 </html>
