change font color

--- a/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/index.html
+++ b/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/index.html
@@ -9,13 +9,19 @@
   </head>
   <body>
     <section class="preferences">
-      <section class="background-color-buttons">
+      <section class="my-buttons">
         <h5>Cor de Fundo</h5>
-        <button id="white-button">white</button>
-        <button id="black-button">black</button>
-        <button id="green-button">green</button>
-        <button id="blue-button">blue</button>
-        <button id="yellow-button">yellow</button>
+        <button class="white-button">white</button>
+        <button class="black-button">black</button>
+        <button class="green-button">green</button>
+        <button class="blue-button">blue</button>
+        <button class="yellow-button">yellow</button>
+      </section>
+      <section class="my-buttons">
+        <h5>Cor da fonte</h5>
+        <button class="white-button">white</button>
+        <button class="black-button">black</button>
+        <button class="blue-button">navy</button>
       </section>
     </section>
     <section class="section-content">
