exercise 5, im happy because i could resolve using only for loop, now ill refactor the code

--- a/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/index.html
+++ b/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/index.html
@@ -23,6 +23,14 @@
         <button class="black-button">black</button>
         <button class="blue-button">navy</button>
       </section>
+      <section class="my-buttons">
+        Tamanho da Fonte
+        <button>8pt</button>
+        <button>10pt</button>
+        <button>12pt</button>
+        <button>14pt</button>
+        <button>20pt</button>
+      </section>
     </section>
     <section class="section-content">
       <h1>Lorem Ipsum</h1>
