exercise 5 part 2 change font color refactored

--- a/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/index.html
+++ b/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/index.html
@@ -18,7 +18,7 @@
         <button class="yellow-button">yellow</button>
       </section>
       <section class="my-buttons">
-        <h5>Cor da fonte</h5>
+        Cor da fonte
         <button class="white-button">white</button>
         <button class="black-button">black</button>
         <button class="blue-button">navy</button>
