exercise 5 change line height

--- a/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/index.html
+++ b/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/index.html
@@ -10,7 +10,7 @@
   <body>
     <section class="preferences">
       <section class="my-buttons">
-        <h5>Cor de Fundo</h5>
+        Cor de Fundo
         <button class="white-button">white</button>
         <button class="black-button">black</button>
         <button class="green-button">green</button>
@@ -31,6 +31,14 @@
         <button>14pt</button>
         <button>20pt</button>
       </section>
+      <section class="my-buttons">
+        Espaçamento entre Linhas
+        <button>1</button>
+        <button>normal</button>
+        <button>1.5</button>
+        <button>2.0</button>
+        <button>3.0</button>
+    </section>
     </section>
     <section class="section-content">
       <h1>Lorem Ipsum</h1>
