exercise 5 change font-family

--- a/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/index.html
+++ b/1-fundamentos/5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercise-5/index.html
@@ -10,7 +10,7 @@
   <body>
     <section class="preferences">
       <section class="my-buttons">
-        Cor de Fundo
+        Cor de fundo
         <button class="white-button">white</button>
         <button class="black-button">black</button>
         <button class="green-button">green</button>
@@ -24,7 +24,7 @@
         <button class="blue-button">navy</button>
       </section>
       <section class="my-buttons">
-        Tamanho da Fonte
+        Tamanho da fonte
         <button>8pt</button>
         <button>10pt</button>
         <button>12pt</button>
@@ -32,12 +32,17 @@
         <button>20pt</button>
       </section>
       <section class="my-buttons">
-        Espaçamento entre Linhas
+        Espaçamento entre as linhas
         <button>1</button>
         <button>normal</button>
         <button>1.5</button>
         <button>2.0</button>
         <button>3.0</button>
+    </section>
+    <section class="my-buttons">
+        Tipo da fonte
+        <button>Arial</button>
+        <button>Times New Roman</button>
     </section>
     </section>
     <section class="section-content">
