--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-e-css-forms/exercise-3/form.html
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-e-css-forms/exercise-3/form.html
@@ -13,27 +13,40 @@
   <form action="" method="get">
     <section class="content">
       <label for="user-name">Nome:</label>
-      <input type="text" name="user-name" id="user-name">
+      <input type="text" name="user-name" id="user-name" minlength="10" maxlength="40" required>
       <br>
       <label for="user-name">Email:</label>
-      <input type="email" name="user-email" id="user-email">
+      <input type="email" name="user-email" id="user-email" minlength="10" maxlength="50" required>
     </section>
 
     <section class="content">
-      <label for="option-1">
-        <input type="radio" name="classe" value="1" id="option-1"> Opção 1
-      </label>
-      <label for="option-2">
-        <input type="radio" name="classe" value="2" id="option-2"> Opção 2
-      </label>
-      <label for="option-3">
-        <input type="radio" name="classe" value="3" id="option-3"> Opção 3
-      </label>
-      <label for="option-4">
-        <input type="radio" name="classe" value="4" id="option-4"> Opção 4
-      </label>
+        <input type="radio" name="fav-destination" value="city" id="city">      
+        <label for="city">Cidade</label>
+        <input type="radio" name="fav-destination" value="country-side" id="country-side">       
+        <label for="country-side">Campo</label>
+        <input type="radio" name="fav-destination" value="beach" id="beach">       
+        <label for="beach">Praia</label>
+        <input type="radio" name="fav-destination" value="mountains" id="mountains">       
+        <label for="mountains">Montanhas</label>
     </section>
-    
+
+    <section class="content">
+      <label for="expectations"> <h2>Por que você deveria ser a pessoa desenvolvedora a ganhar o concurso TrybeTrip?</h2></label>
+      <textarea name="expectations" id="expectations" cols="30" rows="10" maxlength="500" placeholder="Escreva aqui sua resposta..."></textarea>
+    </section>
+
+    <section class="content">
+      <label for="date">Data:</label>
+      <input type="date" name="date" id="date">
+    </section>
+
+    <section class="content">
+        <input type="radio" name="oportunity" id="oportunity">
+        <label for="oportunity">Gostaria de receber outras incríveis oportunidades oferecidas pela Trybe?</label>
+      <br>
+        <input type="radio" name="images" id="images">
+        <label for="images">Concordo que imagens das minhas férias poderão ser usadas na divulgação de concursos futuros.</label>      
+    </section>
   </form>
 </body>
 </html>
