--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-2-bibliotecas-e-frameworks-css/exercise-1-usar-bibliotecas-em-dia-1-html-e-css-forms/exercise-1/index.html
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-2-bibliotecas-e-frameworks-css/exercise-1-usar-bibliotecas-em-dia-1-html-e-css-forms/exercise-1/index.html
@@ -5,39 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Para fixar</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <h1>Para Fixar</h1>
     <form action="" method="get">
       <label for="input-email">
         <p>Email</p>
-        <input type="email" name="email" id="input-email" placeholder="Digite seu email" required autocomplete="off" autofocus/>
+        <input
+          type="email"
+          name="email"
+          id="input-email"
+          placeholder="Digite seu email"
+          required
+          autocomplete="off"
+          autofocus
+        />
       </label>
       <label for="input-password">
-      <p>Senha</p>
-      <input
-        type="password" name="senha" id="input-password" placeholder="Digite sua senha" required/>
+        <p>Senha</p>
+        <input
+          type="password"
+          name="senha"
+          id="input-password"
+          placeholder="Digite sua senha"
+          required
+        />
       </label>
       <label for="input-password">
         Lembre-me
-        <input type="checkbox" name="lembre-me"/>
+        <input type="checkbox" name="lembre-me" />
       </label>
-      <br> <br>
+      <br />
+      <br />
       <button type="submit">Entrar</button>
     </form>
   </body>
 </html>
-<!-- 
-Adicione os campos de entrada para email e senha.
-
-Adicione um checkbox com o texto Lembre-me.
-
-Adicione um botão com o texto Entrar; crie o botão através da tag <input>.
-
-Adicione os placeholder Digite seu email e Digite sua senha para os campos de email e senha.
-
-Adicione o atributo required para os campos de email e senha.
-
-Adicione o atributo autocomplete="off" para o campo de email.
-
-Adicione o atributo autofocus para o campo de email. -->
