--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-2-bibliotecas-e-frameworks-css/exercise-1-usar-bibliotecas-em-dia-1-html-e-css-forms/exercise-3/form.html
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-2-bibliotecas-e-frameworks-css/exercise-1-usar-bibliotecas-em-dia-1-html-e-css-forms/exercise-3/form.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <title>TrybeTrip</title>
 </head>
 <body>
@@ -32,6 +33,7 @@
 
     <section class="content">
       <label for="why-me"> <h2>Por que você deveria ser a pessoa desenvolvedora a ganhar o concurso TrybeTrip?</h2></label>
+      <br>
       <textarea name="why-me" id="why-me" cols="40" rows="10" maxlength="500" placeholder="Escreva aqui sua resposta..."></textarea>
     </section>
 
