--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-2-bibliotecas-e-frameworks-css/exercise-1-usar-bibliotecas-em-dia-1-html-e-css-forms/exercise-3/form.html
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-2-bibliotecas-e-frameworks-css/exercise-1-usar-bibliotecas-em-dia-1-html-e-css-forms/exercise-3/form.html
@@ -8,12 +8,13 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/pikaday/css/pikaday.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+  <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
 </head>
 <body>
   <header>
     <h1 id="title">TrybeTrip</h1>
   </header>
-  <form action="" method="get">
+  <form action="" method="get" id="form">
     <section class="content ">
       <label for="user-name">Nome:</label>
       <input type="text" name="user-name" id="user-name" minlength="10" maxlength="40" required>
@@ -53,17 +54,34 @@
     </section>
     
     <section class="content">
-      <button class="btn btn-primary" type="submit" id="submit-btn" disabled>Enviar</button>
+      <button class="btn btn-primary" type="submit" id="submit-btn" >Enviar</button>
       <button class="btn btn-light" type="reset" id="clear-btn">Apagar</button>
     </section>
   </form>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/locale/pt.min.js" integrity="sha512-l3UpBpQozVlOQB23Ah65fE1Y4u5XMGpaITEybm4NyK06ISM5OVaUWs50wQ7h3IzbNiozaP9HkNYUIy0mGDNS7Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdn.jsdelivr.net/npm/pikaday/pikaday.js"></script>
   <script src="./script.js"></script>
   <script>
      var picker = new Pikaday({
         field: document.getElementById('datepicker'),
         format: 'D MMM YYYY',
+        onSelect: function() {
+            console.log(this.getMoment().format('Do MMMM YYYY'));
+        }
     });
+
+    const validate = new window.JustValidate('#form');
+    validate .addField('#user-name', [
+    {
+      rule: 'minLength',
+      value: 10,
+    },
+    {
+      rule: 'maxLength',
+      value: 40,
+    },
+  ])
+
   </script>
 </body>
 </html>
