--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-2-bibliotecas-e-frameworks-css/exercise-1-usar-bibliotecas-em-dia-1-html-e-css-forms/exercise-3/form.html
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-2-bibliotecas-e-frameworks-css/exercise-1-usar-bibliotecas-em-dia-1-html-e-css-forms/exercise-3/form.html
@@ -1,87 +1,178 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TrybeTrip</title>
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/pikaday/css/pikaday.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-  <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
-</head>
-<body>
-  <header>
-    <h1 id="title">TrybeTrip</h1>
-  </header>
-  <form action="" method="get" id="form">
-    <section class="content ">
-      <label for="user-name">Nome:</label>
-      <input type="text" name="user-name" id="user-name" minlength="10" maxlength="40" required>
-      <br>
-      <label for="user-name">Email:</label>
-      <input type="email" name="user-email" id="user-email" minlength="10" maxlength="50" required>
-    </section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TrybeTrip</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/pikaday/css/pikaday.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
+  </head>
+  <body>
+    <header>
+      <h1 id="title">TrybeTrip</h1>
+    </header>
+    <form action="" method="get" id="form">
+      <section class="content">
+        <label for="user-name">Nome:</label>
+        <input type="text" name="user-name" id="user-name" />
+        <br />
+        <label for="user-email">Email:</label>
+        <input type="email" name="user-email" id="user-email" />
+      </section>
 
-    <section class="content">
-        <input class="form-check-input" type="radio" name="fav-destination" value="city" id="city">      
+      <section class="content">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="fav-destination"
+          value="city"
+          id="city"
+        />
         <label for="city">Cidade</label>
-        <input class="form-check-input" type="radio" name="fav-destination" value="country-side" id="country-side">       
+        <input
+          class="form-check-input"
+          type="radio"
+          name="fav-destination"
+          value="country-side"
+          id="country-side"
+        />
         <label for="country-side">Campo</label>
-        <input class="form-check-input" type="radio" name="fav-destination" value="beach" id="beach">       
+        <input
+          class="form-check-input"
+          type="radio"
+          name="fav-destination"
+          value="beach"
+          id="beach"
+        />
         <label for="beach">Praia</label>
-        <input class="form-check-input" type="radio" name="fav-destination" value="mountains" id="mountains">       
+        <input
+          class="form-check-input"
+          type="radio"
+          name="fav-destination"
+          value="mountains"
+          id="mountains"
+        />
         <label for="mountains">Montanhas</label>
-    </section>
+      </section>
 
-    <section class="content">
-      <label for="why-me"> <h2>Por que você deveria ser a pessoa desenvolvedora a ganhar o concurso TrybeTrip?</h2></label>
-      <br>
-      <textarea name="why-me" id="why-me" cols="40" rows="10" maxlength="500" placeholder="Escreva aqui sua resposta..."></textarea>
-    </section>
+      <section class="content">
+        <label for="why-me">
+          <h2>
+            Por que você deveria ser a pessoa desenvolvedora a ganhar o concurso
+            TrybeTrip?
+          </h2></label
+        >
+        <br />
+        <textarea
+          name="why-me"
+          id="why-me"
+          cols="40"
+          rows="10"
+          maxlength="500"
+          placeholder="Escreva aqui sua resposta..."
+        ></textarea>
+      </section>
 
-    <section class="content">
-      <label for="date">Data:</label>
-      <input type="text" name="date" id="datepicker">
-    </section>
+      <section class="content">
+        <label for="date">Data:</label>
+        <input type="text" name="date" id="datepicker" />
+      </section>
 
-    <section class="content">
-        <input class="form-check-input" type="radio" name="oportunity" id="oportunity">
-        <label for="oportunity">Gostaria de receber outras incríveis oportunidades oferecidas pela Trybe?</label>
-      <br>
-        <input class="form-check-input" type="radio" name="images" id="images" required>
-        <label for="images">Concordo que imagens das minhas férias poderão ser usadas na divulgação de concursos futuros.</label>      
-    </section>
-    
-    <section class="content">
-      <button class="btn btn-primary" type="submit" id="submit-btn" >Enviar</button>
-      <button class="btn btn-light" type="reset" id="clear-btn">Apagar</button>
-    </section>
-  </form>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/locale/pt.min.js" integrity="sha512-l3UpBpQozVlOQB23Ah65fE1Y4u5XMGpaITEybm4NyK06ISM5OVaUWs50wQ7h3IzbNiozaP9HkNYUIy0mGDNS7Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdn.jsdelivr.net/npm/pikaday/pikaday.js"></script>
-  <script src="./script.js"></script>
-  <script>
-     var picker = new Pikaday({
-        field: document.getElementById('datepicker'),
-        format: 'D MMM YYYY',
-        onSelect: function() {
-            console.log(this.getMoment().format('Do MMMM YYYY'));
-        }
-    });
+      <section class="content">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="oportunity"
+          id="oportunity"
+        />
+        <label for="oportunity"
+          >Gostaria de receber outras incríveis oportunidades oferecidas pela
+          Trybe?</label
+        >
+        <br />
+        <input
+          class="form-check-input"
+          type="radio"
+          name="images"
+          id="images"
+          required
+        />
+        <label for="images"
+          >Concordo que imagens das minhas férias poderão ser usadas na
+          divulgação de concursos futuros.</label
+        >
+      </section>
 
-    const validate = new window.JustValidate('#form');
-    validate .addField('#user-name', [
-    {
-      rule: 'minLength',
-      value: 10,
-    },
-    {
-      rule: 'maxLength',
-      value: 40,
-    },
-  ])
+      <section class="content">
+        <button class="btn btn-primary" type="submit" id="submit-btn">
+          Enviar
+        </button>
+        <button class="btn btn-light" type="reset" id="clear-btn">
+          Apagar
+        </button>
+      </section>
+    </form>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/locale/pt.min.js"
+      integrity="sha512-l3UpBpQozVlOQB23Ah65fE1Y4u5XMGpaITEybm4NyK06ISM5OVaUWs50wQ7h3IzbNiozaP9HkNYUIy0mGDNS7Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/pikaday/pikaday.js"></script>
+    <script src="./script.js"></script>
+    <script>
+      var picker = new Pikaday({
+        field: document.getElementById("datepicker"),
+        format: "D MMM YYYY",
+        onSelect: function () {
+          console.log(this.getMoment().format("Do MMMM YYYY"));
+        },
+      });
 
-  </script>
-</body>
+      const validate = new window.JustValidate("#form");
+      validate.addField("#user-name", [
+        {
+          rule: "minLength",
+          value: 10,
+        },
+        {
+          rule: "maxLength",
+          value: 40,
+        },
+        {
+          rule: "required",
+          errorMessage: "Dados inválidos",
+        },
+      ]);
+      validate.addField("#user-email", [
+        {
+          rule: "minLength",
+          value: 10,
+        },
+        {
+          rule: "maxLength",
+          value: 50,
+        },
+        {
+          rule: "required",
+          errorMessage: "Dados inválidos",
+        },
+        {
+          rule: "email",
+        },
+      ]);
+    </script>
+  </body>
 </html>
