--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-2-bibliotecas-e-frameworks-css/exercise-1-usar-bibliotecas-em-dia-1-html-e-css-forms/exercise-3/form.html
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-2-bibliotecas-e-frameworks-css/exercise-1-usar-bibliotecas-em-dia-1-html-e-css-forms/exercise-3/form.html
@@ -16,8 +16,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
-    <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
+    <link rel="stylesheet" href="style.css" />    
   </head>
   <body>
     <header>
@@ -80,14 +79,13 @@
           id="why-me"
           cols="40"
           rows="10"
-          maxlength="500"
           placeholder="Escreva aqui sua resposta..."
         ></textarea>
       </section>
 
       <section class="content">
         <label for="date">Data:</label>
-        <input type="text" name="date" id="datepicker" />
+        <input type="text" name="date" id="datepicker" autocomplete="off"/>
       </section>
 
       <section class="content">
@@ -116,7 +114,7 @@
       </section>
 
       <section class="content">
-        <button class="btn btn-primary" type="submit" id="submit-btn">
+        <button class="btn btn-primary" type="submit" id="submit-btn" disabled>
           Enviar
         </button>
         <button class="btn btn-light" type="reset" id="clear-btn">
@@ -131,48 +129,7 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/pikaday/pikaday.js"></script>
+    <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
     <script src="./script.js"></script>
-    <script>
-      var picker = new Pikaday({
-        field: document.getElementById("datepicker"),
-        format: "D MMM YYYY",
-        onSelect: function () {
-          console.log(this.getMoment().format("Do MMMM YYYY"));
-        },
-      });
-
-      const validate = new window.JustValidate("#form");
-      validate.addField("#user-name", [
-        {
-          rule: "minLength",
-          value: 10,
-        },
-        {
-          rule: "maxLength",
-          value: 40,
-        },
-        {
-          rule: "required",
-          errorMessage: "Dados inválidos",
-        },
-      ]);
-      validate.addField("#user-email", [
-        {
-          rule: "minLength",
-          value: 10,
-        },
-        {
-          rule: "maxLength",
-          value: 50,
-        },
-        {
-          rule: "required",
-          errorMessage: "Dados inválidos",
-        },
-        {
-          rule: "email",
-        },
-      ]);
-    </script>
   </body>
 </html>
