--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-3-css-flexbox-parte-1/exercise-5-trybe-tech-gallery/tech-gallery.html
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-3-css-flexbox-parte-1/exercise-5-trybe-tech-gallery/tech-gallery.html
@@ -15,7 +15,7 @@
     <h1>TRYBE TECH-GALLERY</h1>
     <h3>SIGN-UP</h3>
   </header>
-  <section>
+  <section id="first-section">
     <p>Take a look at some of the technologies which you will learn in our fundamentals and front-end module!</p>
   </section>
   <section>
