--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-3-css-flexbox-parte-1/exercise-5-trybe-tech-gallery/tech-gallery.html
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-3-css-flexbox-parte-1/exercise-5-trybe-tech-gallery/tech-gallery.html
@@ -74,11 +74,7 @@
     <hr />
     <footer>
       <a href="https://www.instagram.com/betrybe/" target="_blank">
-        <img
-          class="social-img"
-          src="./images/instagram-logo.png"
-          alt="Instagram logo"
-        />
+        <img class="social-img" src="./images/instagram-logo.png" alt="Instagram logo"/>
       </a>
       <a href="https://www.linkedin.com/school/betrybe/" target="_blank">
         <img
