6-3 ex5 post feedback

--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-3-css-flexbox-parte-1/exercise-5-trybe-tech-gallery/tech-gallery.html
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-3-css-flexbox-parte-1/exercise-5-trybe-tech-gallery/tech-gallery.html
@@ -71,7 +71,9 @@
         </div>
       </section>
     </section>
+    <div>
     <hr />
+    </div>  
     <footer>
       <a href="https://www.instagram.com/betrybe/" target="_blank">
         <img class="social-img" src="./images/instagram-logo.png" alt="Instagram logo"/>
