6-5 ex2 telas grandes

--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-2/small-screen.html
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-2/small-screen.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Media Query Demo</title>
-  <link rel="stylesheet" href="small-screen.css" media="screen and (max-width: 768px" />
+  <link rel="stylesheet" href="small-screen.css" />
 </head>
   <body>
     <header>
