6-5 ex 5 mobile layout

--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-5-bonus/index.html
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-5-bonus/index.html
@@ -24,12 +24,12 @@
           <li><a href="#">Contato</a></li>
         </ul>
       </nav>
-      <div class="title-subtitle">
-        <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
-        <h2>Fatos sobre o Stomatopoda</h2>
-      </div>
     </header>
     <!-- MAIN -->
+    <div class="title-subtitle">
+      <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
+      <h2>Fatos sobre o Stomatopoda</h2>
+    </div>
     <main>
       <article class="info">
         <div id="img-div">
@@ -55,10 +55,10 @@
           ser uma boa ideia mantê-la em um aquário. Podemos encontrar na tabela
           abaixo informações a respeito de sua classificação científica.
         </p>
-        <!-- <div id="table-container"> -->
+        <div id="table-container">
         <table border="1">
           <CAPTION><strong>Classificação Científica</strong></CAPTION>
-          <tr>
+          <tr width="">
             <th>Reino</th>
             <th>Filo</th>
             <th>Subfilo</th>
