--- a/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-5-bonus/index.html
+++ b/1-fundamentos/6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercise-5-bonus/index.html
@@ -105,7 +105,7 @@
 
       <!-- Referências -->
 
-      <section>
+      <section id="references">
         <h3>Referências Bibliográficas</h3>
         <ul>
           <li>
@@ -127,13 +127,14 @@
               >Ambiente Brasil</a
             >
           </li>
+          <h3>Recurso adicional</h3>
+          <a
+            href="https://www.youtube.com/watch?v=E0Li1k5hGBE&ab_channel=NatGeoWILD"
+            >Documentário sobre o soco da Lagosta Boxeadora</a
+          >
         </ul>
       </section>
-      <h3>Recurso adicional</h3>
-      <a
-        href="https://www.youtube.com/watch?v=E0Li1k5hGBE&ab_channel=NatGeoWILD"
-        >Documentário sobre o soco da Lagosta Boxeadora</a
-      >
+
     </main>
     <!-- Rodapé -->
     <footer>Conteúdo compilado por Reinaldo Coelho de Souza, 2022.</footer>
