feat: install nanoid

--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-1-ambiente-de-desenvolvimento/gerador-de-senhas-seguras/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-1-ambiente-de-desenvolvimento/gerador-de-senhas-seguras/index.html
@@ -7,7 +7,7 @@
   <title>Gerador de Senhas Seguras</title>
 </head>
 <body>
-  <h1>Gerador de Senhas Seguras</h1>
+  <h1>🔒️ Gerador de Senhas Seguras</h1>
   <button>Gerar Senha Segura</button>
   <h2>...</h2>
   <script type="module" src="./src/main.js"></script>
