--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-1-ambiente-de-desenvolvimento/field-validator/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-1-ambiente-de-desenvolvimento/field-validator/index.html
@@ -7,6 +7,16 @@
   <title>Field Validator</title>
 </head>
 <body>
-  
+  <form action="" method="get">
+    <label for="text"></label>
+    <input type="text" name="text" id="text" placeholder="Digite aqui...">
+    <select name="type-validate" id="type-validate">
+      <option value="cpf">cpf</option>
+      <option value="email">email</option>
+      <option value="password">password</option>
+      <option value="username">username</option>
+      <option value="nickname">nickname</option>
+    </select>
+  </form>
 </body>
 </html>
