feat: exercise 1 sweet alert

--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/index.html
@@ -11,6 +11,6 @@
   <img src="">card aqui
   <p>Hero's name</p>
   <button>Sortear</button>
-  
+  <script src="src/main.js" type="module"></script>
 </body>
 </html>
