--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <h1>SuperHeroes</h1>
-  <img src="">card aqui
-  <p>Hero's name</p>
-  <button>Sortear</button>
+  <img id="image">
+  <p id="name">Hero's name</p>
+  <button id="button">Sortear</button>
   <script src="src/main.js" type="module"></script>
 </body>
 </html>
