feat: css disney exercise

--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/index.html
@@ -7,10 +7,16 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>SuperHeroes</h1>
+  <main>
+    <div>
+  <h1>Disney Characters</h1>
   <img id="image">
   <p id="name">Hero's name</p>
+</div>
+<div>
   <button id="button">Sortear</button>
+</div>
+</main>
   <script src="src/main.js" type="module"></script>
 </body>
 </html>
