--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/bonus/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/bonus/index.html
@@ -7,7 +7,11 @@
   <title>Select Pet</title>
 </head>
 <body>
-  
-  <script src=""></script>
+  <h1>Select Pet</h1>
+  <button id="random-dog">Get random dog</button>
+  <button id="random-cat">Get random cat</button>
+  <button id="surprise">Surprise-me</button>
+  <script src="src/main.js" type="module"></script>
+  <img src="" alt="Random pet">
 </body>
 </html>
