style: style.css

--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/bonus/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/bonus/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Select Pet</title>
-</head>
-<body>
-  <h1>Select Pet</h1>
-  <button id="random-dog">Get random dog</button>
-  <button id="random-cat">Get random cat</button>
-  <button id="surprise">Surprise-me</button>
-  <hr>
-  <img src="" alt="Random pet" id="random-pet">
-  <script src="src/main.js" type="module"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Select Pet</title>
+  </head>
+  <body>
+    <main>
+      <h1>Select Pet</h1>
+      <div class="buttons-container">
+        <button id="random-dog">Get random dog</button>
+        <button id="random-cat">Get random cat</button>
+        <button id="surprise">Surprise-me</button>
+      </div>
+      <img src="" alt="Random pet" id="random-pet" />
+    </main>
+    <script src="src/main.js" type="module"></script>
+  </body>
 </html>
