style: style.css

--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/bonus/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/bonus/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <h1>Select Pet</h1>
+      <h1>🐈‍⬛️ Select Pet 🐕️</h1>
       <div class="buttons-container">
         <button id="random-dog">Get random dog</button>
         <button id="random-cat">Get random cat</button>
@@ -16,6 +16,11 @@
       </div>
       <img src="" alt="Random pet" id="random-pet" />
     </main>
+    <footer>
+      <p>
+      2023, Reinaldo Coelho. Alguns direitos reservados.</p>
+      <p>Background por <a href="https://bgjar.com/">BGJar</a></p>
+    </footer>
     <script src="src/main.js" type="module"></script>
   </body>
 </html>
