--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/bonus/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/bonus/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/8cfb226973.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Select Pet</title>
   </head>
   <body>
@@ -17,9 +21,16 @@
       <img src="" alt="Random pet" id="random-pet" />
     </main>
     <footer>
-      <p>
-      2023, Reinaldo Coelho. Alguns direitos reservados.</p>
+      <p>2023, Reinaldo Coelho. Alguns direitos reservados.</p>
       <p>Background por <a href="https://bgjar.com/">BGJar</a></p>
+      <div>
+        <a href="https://www.linkedin.com/in/coelhoreinaldo/" target="_blank"
+          ><i class="fa-brands fa-linkedin fa-2xl" title="LinkedIn"></i
+        ></a>
+        <a href="https://github.com/coelhoreinaldo" target="_blank"
+          ><i class="fa-brands fa-square-github fa-2xl" title="GitHub"></i
+        ></a>
+      </div>
     </footer>
     <script src="src/main.js" type="module"></script>
   </body>
