--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/bonus/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/bonus/index.html
@@ -18,7 +18,7 @@
         <button id="random-cat">Get random cat</button>
         <button id="surprise">Surprise-me</button>
       </div>
-      <img src="" alt="Random pet" id="random-pet" />
+      <img src="./src/cat.jpg" alt="Random pet" id="random-pet" />
     </main>
     <footer>
       <p>2023, Reinaldo Coelho. Alguns direitos reservados.</p>
