--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/index.html
@@ -7,6 +7,9 @@
   <title>Casa de Câmbio</title>
 </head>
 <body>
+  <header>
+    <h1>Casa de Câmbio</h1>
+  </header>
   <script type="module" src="./src/main.js"></script>
 </body>
 </html>
