--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/index.html
@@ -10,6 +10,16 @@
   <header>
     <h1>Casa de Câmbio</h1>
   </header>
+  <main>
+    <section>
+      <label for="input-coin">Digite a moeda:</label>
+      <input id="input-coin" type="text">
+      <button>Pesquisar</button>
+    </section>
+    <section>
+      
+    </section>
+  </main>
   <script type="module" src="./src/main.js"></script>
 </body>
 </html>
