build: eslint da trybe

--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/index.html
@@ -12,12 +12,12 @@
   </header>
   <main>
     <section>
-      <label for="input-coin">Digite a moeda:</label>
-      <input id="input-coin" type="text">
-      <button>Pesquisar</button>
+      <label for="moeda">Digite a moeda:</label>
+      <input id="moeda" type="text">
+      <button id="search">Pesquisar</button>
     </section>
-    <section>
-
+    <section id="currency-container">
+      <h1 id="result"></h1>
     </section>
   </main>
   <script type="module" src="./src/main.js"></script>
