--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/index.html
@@ -18,6 +18,8 @@
     </section>
     <section id="currency-container">
       <h1 id="result"></h1>
+      <ul id="currency-ul">
+      </ul>
     </section>
   </main>
   <script type="module" src="./src/main.js"></script>
