--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Casa de Câmbio</title>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </head>
 <body>
   <header>
