style: reset css

--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Casa de Câmbio</h1>
+    <h1>Casa de <span>Câmbio</span></h1>
   </header>
   <main>
     <section>
